--- a/functions/html/addere.html
+++ b/functions/html/addere.html
@@ -9,7 +9,7 @@
         />
         <button>
             <i class="fa-solid fa-circle-plus"></i>
-            Post
+            Add
         </button>
     </form>
 </article>
