--- a/functions/html/base.html
+++ b/functions/html/base.html
@@ -20,7 +20,7 @@
                     <li>
                         <a href="/">
                             <i class="fa-sharp fa-solid fa-globe"></i>
-                            Mundus
+                            Templates
                         </a>
                     </li>
                     <li>
@@ -40,7 +40,7 @@
         </section>
         <div>{{ content }}</div>
         <footer>
-            <div>
+            <p>
                 <a href="https://www.patreon.com/moixllik" target="_blank"
                     ><i class="fa-brands fa-patreon"></i> Patreon</a
                 >
@@ -52,7 +52,7 @@
                 <a href="https://github.com/thesis-lat" target="_blank"
                     ><i class="fa-brands fa-github"></i> GitHub</a
                 >
-            </div>
+            </p>
             &copy; 2024
         </footer>
     </body>
