--- a/functions/html/quaerere.html
+++ b/functions/html/quaerere.html
@@ -1,7 +1,13 @@
 <section>
     <article>
-        <form method="post" action="/quaerere">
-            <input type="search" name="q" placeholder="Quaerere" required />
+        <form action="/quaerere">
+            <input
+                type="search"
+                name="q"
+                value="{{ query }}"
+                placeholder="Quaerere"
+                required
+            />
             <button>
                 <i class="fa-solid fa-filter"></i>
                 Filter
