--- a/functions/html/base.html
+++ b/functions/html/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:image" content="https://thesis.lat/cover.webp" />
         <title>{{ title }}</title>
         <link rel="stylesheet" href="/styles.css" />
     </head>
@@ -38,7 +39,7 @@
                 </ul>
             </nav>
         </section>
-        <div>{{ content }}</div>
+        {{ content }}
         <footer>
             <p>
                 <a href="https://www.patreon.com/moixllik" target="_blank"
