--- a/functions/html/base.html
+++ b/functions/html/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <img src="/logo.png" alt="Logo" height="120" />
+            <img src="/logo.webp" alt="Logo" height="120" />
             <div>
                 <h1>Thesis</h1>
                 <h2>Scientia potentia est</h2>
