--- a/functions/html/addere.html
+++ b/functions/html/addere.html
@@ -33,9 +33,7 @@
                         >Universitas</a
                     >
                     /
-                    <a href="//{{ universitas }}{{ facultas }}" target="_blank"
-                        >Facultas</a
-                    >
+                    <a href="//{{ facultas }}" target="_blank">Facultas</a>
                     /
                     <a href="//{{ repositorium }}" target="_blank"
                         >Repositorium</a
