--- a/functions/html/template.html
+++ b/functions/html/template.html
@@ -23,9 +23,7 @@
         ></iframe>
         <p>
             <a href="//{{ universitas }}" target="_blank">Universitas</a> /
-            <a href="//{{ universitas }}{{ facultas }}" target="_blank"
-                >Facultas</a
-            >
+            <a href="//{{ facultas }}" target="_blank">Facultas</a>
             /
             <a href="//{{ repositorium }}" target="_blank">Repositorium</a>
         </p>
