--- a/functions/html/base.html
+++ b/functions/html/base.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:image" content="https://thesis.lat/cover.webp" />
+        <meta property="og:title" content="{{ title }}" />
         <title>{{ title }}</title>
         <link rel="stylesheet" href="/styles.css" />
     </head>
