--- a/functions/html/base.html
+++ b/functions/html/base.html
@@ -37,6 +37,12 @@
                             Addere</a
                         >
                     </li>
+                    <li>
+                        <a href="/Thesis.pdf">
+                            <i class="fa-solid fa-file-pdf"></i>
+                            Tutorial</a
+                        >
+                    </li>
                 </ul>
             </nav>
         </section>
